Updates Made in this commit: .) MyJTable.java surpressed msg regarding bulk add from lists .) Meal_Plan_Screen.java for collections  with 1 item switched with List.Of(
Next To Do:
.)

Previous Updates:
.)

Errors
.)